Fixed layout issues in dashboards

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,6 +56,16 @@ a {
   color: #326fa7;
 }
 
+.dashboard {
+  &.row {
+    margin: 0;
+  }
+
+  .col-sm-6 {
+    padding: 0;
+  }
+}
+
 @media screen and (max-width:570px) {
     i.hide-small { display:none; }
     .hide-small { display:none; }
